<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    android:orientation="vertical"
    tools:context=".view.MenuActivity">

    <Button
        android:id="@+id/users_btn"
        android:text="@string/users_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/posts_btn"
        android:text="@string/posts_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/comments_btn"
        android:text="@string/comments_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/todos_btn"
        android:text="@string/todos_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/_btn"
        android:text="@string/users_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/categories_btn"
        android:text="@string/categories_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/products_btn"
        android:text="@string/products_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/product_categories_btn"
        android:text="@string/product_categories_btn_text"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>

</LinearLayout>